objects/LLC_BI__Treasury_Service__c.object
<CustomObject>
    <description>This object stores the core fields related to treasury services.</description>
    <fields>
        <fullName>CF_1_Year_Post_Install_Touchpoint__c</fullName>
        <description>This field is used in Management Solution Products &gt; Install Details sub-route.</description>
        <formula>CF_Install_Date__c + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1 Year Post Install Touchpoint</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_45_Day_Post_Install_Touchpoint__c</fullName>
        <description>This field is used in Install Details sub-route.</description>
        <formula>DATEVALUE( CF_Install_Date_Time__c ) + 45</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>45 Day Post Install Touchpoint</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Account_Analysis_Error_Count__c</fullName>
        <description>used to store count of &apos;Account Analysis&apos; selected in Error1, Error2 and Error3 Found</description>
        <formula>IF( AND(ISPICKVAL(CF_Error_1_Found__c, &apos;Account Analysis&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Account Analysis&apos;), ISPICKVAL(CF_Error_3_Found__c, &apos;Account Analysis&apos;)), 3,

IF( OR(
AND(ISPICKVAL(CF_Error_1_Found__c, &apos;Account Analysis&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Account Analysis&apos;)), AND(ISPICKVAL(CF_Error_2_Found__c, &apos;Account Analysis&apos;),ISPICKVAL(CF_Error_3_Found__c, &apos;Account Analysis&apos;)), AND(ISPICKVAL(CF_Error_3_Found__c, &apos;Account Analysis&apos;),ISPICKVAL(CF_Error_1_Found__c, &apos;Account Analysis&apos;))),2 ,

IF( OR(ISPICKVAL(CF_Error_1_Found__c, &apos;Account Analysis&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Account Analysis&apos;), ISPICKVAL(CF_Error_3_Found__c, &apos;Account Analysis&apos;)), 1, 0
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Analysis Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Account_Daily_Limit__c</fullName>
        <description>On UI used under Wire Accounts route &gt; Wire Accounts screen section for Wire Transmission products</description>
        <label>Account Daily Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Analysis_Type__c</fullName>
        <label>Analysis Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>O4</fullName>
                </value>
                <value>
                    <fullName>TS</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Approval_Duration__c</fullName>
        <description>This field is used to determine Approval Duration.</description>
        <formula>CF_Date_of_Approval__c - CF_Date_Submitted_for_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in Management Solution Products &gt; Install Details sub-route.</description>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Services13</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Awaiting_Install_duration__c</fullName>
        <description>This field is used to determine Awaiting Install Duration</description>
        <formula>CF_Date_of_Initial_Setup__c -  CF_Date_DocuSign_Returned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awaiting Install duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Back_Office_Error_Count__c</fullName>
        <description>used to store count of &apos;Back Office&apos; selected in Error1, Error2 and Error3 Found</description>
        <formula>IF( AND(ISPICKVAL(CF_Error_1_Found__c, &apos;Back Office&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Back Office&apos;), ISPICKVAL(CF_Error_3_Found__c, &apos;Back Office&apos;)), 3,

IF( OR(
AND(ISPICKVAL(CF_Error_1_Found__c, &apos;Back Office&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Back Office&apos;)), 
AND(ISPICKVAL(CF_Error_2_Found__c, &apos;Back Office&apos;),ISPICKVAL(CF_Error_3_Found__c, &apos;Back Office&apos;)), 
AND(ISPICKVAL(CF_Error_3_Found__c, &apos;Back Office&apos;),ISPICKVAL(CF_Error_1_Found__c, &apos;Back Office&apos;))),2 ,

IF( OR(ISPICKVAL(CF_Error_1_Found__c, &apos;Back Office&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Back Office&apos;), ISPICKVAL(CF_Error_3_Found__c, &apos;Back Office&apos;)), 1, 0
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Back Office Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Billing_Account_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store billing account number</description>
        <label>Billing Account Number</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Treasury Service</relationshipLabel>
        <relationshipName>Treasury_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Compliance_Notes__c</fullName>
        <description>Used to capture Compliance Notes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Compliance Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CF_Compliance_Review_Needed__c</fullName>
        <description>This field is used to identify weather a compliance is needed for a certain product or not.</description>
        <formula>OR(
LLC_BI__Product_Reference__r.Name = &apos;ACH Credit Origination&apos;,
LLC_BI__Product_Reference__r.Name = &apos;ACH Debit Origination&apos;,
LLC_BI__Product_Reference__r.Name = &apos;ACH Third Party Sender&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Low Speed RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Hi-Speed RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Mobile RDC&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Remote Lockbox&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Retail Lockbox&apos;,
LLC_BI__Product_Reference__r.Name = &apos;U-Pay Portal&apos;,
LLC_BI__Product_Reference__r.Name = &apos;Portal I-Collect Portal&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance Review Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Compliance_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Compliance Review Required</description>
        <inlineHelpText>Is Compliance Review Required</inlineHelpText>
        <label>Compliance Review Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Compliance_Review_Status__c</fullName>
        <description>Used in Compliance Review sub-route under Treasury Service Details Route</description>
        <label>Compliance Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Compliance_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to capture the Compliance Reviewer under Compliance review sub-route.</description>
        <label>Compliance Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Service6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Confirm_Install_Date_Attendees__c</fullName>
        <description>This field is used to capture the list of expected attendees</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please list the expected attendees</inlineHelpText>
        <label>Confirm Install Date/Attendees</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Corporate_ACH_Exposure_Value_UPayPrtl__c</fullName>
        <formula>CF_Requested_ACH_Limit__c * 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACH Corporate Exposure Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Corporate_ACH_Exposure_Value__c</fullName>
        <description>This field is used to aggregate Exposure Values of all ACH Company records.</description>
        <label>Corporate ACH Exposure Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Corporate_ACH_Origination_Limit__c</fullName>
        <description>This field is used to show the Requested ACH Company Limits of all the related ACH Company records.</description>
        <label>Corporate ACH Origination Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Corporate_Daily_Wire_Limit__c</fullName>
        <description>This field is the Rollup Total of the daily wire limits of all the wire accounts</description>
        <label>Corporate Wire Limit</label>
        <summarizedField>CO_Treasury_Product_Wire_Accounts__c.CF_Account_Daily_Limit__c</summarizedField>
        <summaryForeignKey>CO_Treasury_Product_Wire_Accounts__c.CF_Treasury_Service__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CF_Credit_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to specify the Credit Analyst. Used in Team Details Route under TS record.</description>
        <label>Credit Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Service4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Credit_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to specify the Credit Officer. Used in Team Details Route under TS record.</description>
        <label>Credit Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Service5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Credit_Recommendation__c</fullName>
        <description>This field is updated by user as part of financial review process</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Recommendation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CF_Customer_Address_Depricated__c</fullName>
        <description>Used to store customer address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Address - NOT IN USE</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CF_Customer_Address__c</fullName>
        <description>Used to show customer address on the TS UI.</description>
        <formula>LLC_BI__Relationship__r.ShippingStreet &amp;&quot;, &quot; + LLC_BI__Relationship__r.ShippingCity &amp;&quot;, &quot; +  LLC_BI__Relationship__r.ShippingCountry &amp;&quot;, &quot; + LLC_BI__Relationship__r.ShippingState &amp;&quot;-&quot; +  LLC_BI__Relationship__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Customer_Signature_Duration__c</fullName>
        <description>This field is used to determine Customer Signature Duration.</description>
        <formula>CF_Date_DocuSign_Returned__c -  CF_Date_DocuSign_Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Signature Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_DDA_Maintenance_Error_Count__c</fullName>
        <description>used to store count of &apos;DDA Maintenance&apos; selected in Error1, Error2 and Error3 Found</description>
        <formula>IF( AND(ISPICKVAL(CF_Error_1_Found__c, &apos;DDA Maintenance&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;DDA Maintenance&apos;), ISPICKVAL(CF_Error_3_Found__c, &apos;DDA Maintenance&apos;)), 3,

IF( OR(
AND(ISPICKVAL(CF_Error_1_Found__c, &apos;DDA Maintenance&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;DDA Maintenance&apos;)), AND(ISPICKVAL(CF_Error_2_Found__c, &apos;DDA Maintenance&apos;),ISPICKVAL(CF_Error_3_Found__c, &apos;DDA Maintenance&apos;)), AND(ISPICKVAL(CF_Error_3_Found__c, &apos;DDA Maintenance&apos;),ISPICKVAL(CF_Error_1_Found__c, &apos;DDA Maintenance&apos;))),2 ,

IF( OR(ISPICKVAL(CF_Error_1_Found__c, &apos;DDA Maintenance&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;DDA Maintenance&apos;), ISPICKVAL(CF_Error_3_Found__c, &apos;DDA Maintenance&apos;)), 1, 0
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDA Maintenance Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Daily_Check_Count__c</fullName>
        <description>Used to capture Daily Check Count info for RDC products.
Treasury Service Details Route &gt; Product Details Section</description>
        <label>Daily Check Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Daily_Deposit_Amount__c</fullName>
        <description>Used to capture Daily Deposit Amount info for RDC products.
Treasury Service Details Route &gt; Product Details Section</description>
        <label>Daily Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Date_DocuSign_Returned__c</fullName>
        <description>This field is being used to capture the date when DocuSign is returned.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date DocuSign Returned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_Date_DocuSign_Sent__c</fullName>
        <description>This field is used to capture Date/Time value when DocuSign is sent.
Used in Management Solution Products &gt; Install Details sub-route.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date DocuSign Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_Date_Order_Entry_Completed__c</fullName>
        <description>This field is used to capture the date when Order entry is completed.
Used in Management Solution Products &gt; Install Details sub-route.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Order Entry Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_Date_Post_Close_Completed__c</fullName>
        <description>This field gets auto-populated when Sub-Stage change to Quality Control.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Post-Close Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_Date_Quality_Control_Completed__c</fullName>
        <description>This field gets auto-populated when Sub-Stage change to Complete</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Quality Control Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_Date_Submitted_for_Approval__c</fullName>
        <description>This field gets auto-populated when Sub-Stage change to Submitted for Approval.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Submitted for Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_Date_of_Approval__c</fullName>
        <description>This field gets auto-populated when the Sub-Stage changes to Doc Prep.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_Date_of_Initial_Setup__c</fullName>
        <description>This field gets auto-populated when Sub-Stage change to Initial Setup.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Initial Setup</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_Doc_Prep_Duration__c</fullName>
        <description>This field is used to determine Doc Prep Duration.</description>
        <formula>CF_Date_DocuSign_Sent__c - CF_Date_of_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doc Prep Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_DocuSign_Sent_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture the user info who seent DocuSign.
Used in Management Solution Products &gt; Install Details sub-route.</description>
        <label>DocuSign Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Services2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Document_Review_Error_Count__c</fullName>
        <description>used to store count of &apos;Document Review&apos; selected in Error1, Error2 and Error3 Found</description>
        <formula>IF( AND(ISPICKVAL(CF_Error_1_Found__c, &apos;Document Review&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Document Review&apos;), ISPICKVAL(CF_Error_3_Found__c, &apos;Document Review&apos;)), 3,

IF( OR(
AND(ISPICKVAL(CF_Error_1_Found__c, &apos;Document Review&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Document Review&apos;)), AND(ISPICKVAL(CF_Error_2_Found__c, &apos;Document Review&apos;),ISPICKVAL(CF_Error_3_Found__c, &apos;Document Review&apos;)), AND(ISPICKVAL(CF_Error_3_Found__c, &apos;Document Review&apos;),ISPICKVAL(CF_Error_1_Found__c, &apos;Document Review&apos;))),2 ,

IF( OR(ISPICKVAL(CF_Error_1_Found__c, &apos;Document Review&apos;), ISPICKVAL(CF_Error_2_Found__c, &apos;Document Review&apos;), ISPICKVAL(CF_Error_3_Found__c, &apos;Document Review&apos;)), 1, 0
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Review Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Does_customer_have_CC_Processing__c</fullName>
        <label>Does customer have CC Processing?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Does_customer_want_to_acceptCCPayment__c</fullName>
        <label>Does customer want to accept CC Payment?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Dual_Control_Procedures_in_Place__c</fullName>
        <description>Used in Wire Accounts route &gt; Wire Accounts screen section for Wire Transmission products</description>
        <label>Dual Control Procedures in Place?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Error_1_Check__c</fullName>
        <description>This field was used on Report to check Error 1 Found field is not null</description>
        <formula>IF( ISPICKVAL(CF_Error_1_Found__c, &apos;&apos;), 0, 1 )</formula>
        <label>Error 1 Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Error_1_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error 1 Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Error_1_Found__c</fullName>
        <label>Error 1 Found</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CF_Products__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Silverlake Setup</fullName>
                </value>
                <value>
                    <fullName>Profit Stars</fullName>
                </value>
                <value>
                    <fullName>Back Office</fullName>
                </value>
                <value>
                    <fullName>Account Analysis</fullName>
                </value>
                <value>
                    <fullName>DDA Maintenance</fullName>
                </value>
                <value>
                    <fullName>iPay</fullName>
                </value>
                <value>
                    <fullName>Document Review</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Error_2_Check__c</fullName>
        <description>This field was used on Report to check Error 2 Found field is not null</description>
        <formula>IF( ISPICKVAL( CF_Error_2_Found__c , &apos;&apos;), 0, 1 )</formula>
        <label>Error 2 Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Error_2_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error 2 Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Error_2_Found__c</fullName>
        <label>Error 2 Found</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CF_Products__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Silverlake Setup</fullName>
                </value>
                <value>
                    <fullName>Back Office</fullName>
                </value>
                <value>
                    <fullName>Account Analysis</fullName>
                </value>
                <value>
                    <fullName>DDA Maintenance</fullName>
                </value>
                <value>
                    <fullName>iPay</fullName>
                </value>
                <value>
                    <fullName>Document Review</fullName>
                </value>
                <value>
                    <fullName>Profit Stars</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Error_3_Check__c</fullName>
        <description>This field was used on Report to check Error 3 Found field is not null</description>
        <formula>IF( ISPICKVAL( CF_Error_3_Found__c , &apos;&apos;), 0, 1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Error 3 Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Error_3_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error 3 Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Error_3_Found__c</fullName>
        <label>Error 3 Found</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CF_Products__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Silverlake Setup</fullName>
                </value>
                <value>
                    <fullName>Back Office</fullName>
                </value>
                <value>
                    <fullName>Account Analysis</fullName>
                </value>
                <value>
                    <fullName>DDA Maintenance</fullName>
                </value>
                <value>
                    <fullName>iPay</fullName>
                </value>
                <value>
                    <fullName>Document Review</fullName>
                </value>
                <value>
                    <fullName>Profit Stars</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Financial_Review_Needed__c</fullName>
        <description>This field will be automatically updated if Risk Rating is 3 OR if Total ACH Exposure &gt; 250K</description>
        <formula>OR( LLC_BI__Relationship__r.CF_Treasury_Risk_Rating__c  &gt;= 3,
 LLC_BI__Relationship__r.CF_Total_ACH_Exposure__c  &gt; 250000 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Review Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Financial_Review_Needed_not_in_use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be automatically updated if Risk Rating is 3 OR if Total ACH Exposure &gt; 250K</description>
        <label>Financial Review Needed?(not in use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Financial_Review_Status__c</fullName>
        <description>This field is updated by user to denote status of Financial Review process</description>
        <label>Financial Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Fulfilment_Stage_Duration__c</fullName>
        <description>This field is used to determine Fulfilment Stage Duration</description>
        <formula>CF_Date_Post_Close_Completed__c - CF_Date_of_Initial_Setup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fulfilment Stage Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Implementation_Post_Close_Duration__c</fullName>
        <description>This field is used to determine Implementation &amp; Post- Close Duration</description>
        <formula>CF_Date_Post_Close_Completed__c -  CF_Install_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation &amp; Post- Close Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Individual_Group__c</fullName>
        <label>Individual/Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Initial_Setup_Duration__c</fullName>
        <description>This field is used to determine Initial Setup Duration.</description>
        <formula>CF_Install_Date_Time__c -  CF_Date_of_Initial_Setup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Setup Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Install_Date_Time__c</fullName>
        <description>This field gets populated with the Date value from associated Opportunity with GMT time value on creating on TS record.

Used in calculation of Implementation &amp; Post- Close Duration in Install Details sub-route.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Install Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_Install_Date__c</fullName>
        <description>Used to capture Install date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Install Date - NOT IN USE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Is_ACH_Company_Rec_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify if there is any ACH Company records exists related to TS record or not?</description>
        <label>Is ACH Company Rec Exists?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Is_Account_Access_Rec_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify if there is any Account Access records exists related to TS record or not?</description>
        <label>Is Account Access Rec Exists?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Is_Administrators_Rec_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify if there is any Administrators exists related to TS record or not?</description>
        <label>Is Administrators Rec Exists?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Is_Next_Review_less_than_Install_Date__c</fullName>
        <description>Used in Treasury Service List View</description>
        <formula>CF_Next_Treasury_Review_Date__c &lt;  DATEVALUE(CF_Install_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Next Review less than Install Date?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Is_Scanner_Info_Rec_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify if there is any Scanner Info records exists related to TS record or not?</description>
        <label>Is Scanner Info Rec Exists?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Is_Scanner_in_Stock_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check if &apos;Is Scanner in Stock?&apos; field on Scanner Info route is populated or not before moving TS to Onboarding for RDC &amp; Lockbox products.</description>
        <label>Is Scanner in Stock Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Is_Setup_Info_MS_Rec_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify if there is any Setup Information records exists related to TS record or not?</description>
        <label>Is Setup Information Rec Exists?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Is_Wire_Account_Rec_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify if there is any Wire Account record exists related to TS record or not?</description>
        <label>Is Wire Account Rec Exists?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Is_an_Existing_Retail_Billpay_User__c</fullName>
        <description>This field is to check Existing Retail Billpay User</description>
        <inlineHelpText>Required for BillPay products</inlineHelpText>
        <label>Is an Existing Retail Billpay User?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>